--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "modern-normalize": "^1.1.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -15,8 +16,15 @@
   "devDependencies": {
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "sass": "^1.45.0",
     "typescript": "4.5.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
