--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "husky": "^7.0.4",
     "sass": "^1.45.0",
     "typescript": "4.5.4"
   },
